--- a/FlowModelDesktop/AddParameterValueWindow.xaml
+++ b/FlowModelDesktop/AddParameterValueWindow.xaml
@@ -1,14 +1,12 @@
-﻿<Window x:Class="FlowModelDesktop.AddParameterWindow"
+﻿<Window x:Class="FlowModelDesktop.AddParameterValueWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FlowModelDesktop"
-        xmlns:viewModel="clr-namespace:FlowModelDesktop.ViewModel"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance viewModel:AddParameterWindowViewModel  }"
-        Title="AddParameterWindow" Height="250" Width="600" FontSize="14" MinHeight="250" MinWidth="600">
-
+        Title="AddParameterValueWindow" Height="300" Width="600" FontSize="14" MinHeight="300" MinWidth="600" Loaded="AddParameterValueWindow_OnLoaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="0.8*"/>
@@ -20,14 +18,20 @@
             <ColumnDefinition Width="0.15*"/>
         </Grid.ColumnDefinitions>
 
-        <StackPanel Grid.Row="0"  Grid.Column="1">
+        <StackPanel Grid.Row="0" Grid.Column="1">
+            <Label>Тип материала:</Label>
+            <ComboBox Name="Materials" Margin="5 0" SelectedItem="{Binding SelectedMaterial}" ItemsSource="{Binding AllMaterials}" DisplayMemberPath="Type"></ComboBox>
+
             <Label>Наименование параметра:</Label>
-            <TextBox Margin="5 0" Text="{Binding ParameterName}"></TextBox>
-            <Label>Тип параметра:</Label>
-            <ComboBox Margin="5 0" SelectedItem="{Binding SelectedTypeParameter}" ItemsSource="{Binding AllParameterTypes}" DisplayMemberPath="Name"></ComboBox>
-            <Label>Единица измерения параметра:</Label>
-            <ComboBox Margin="5 0" SelectedItem="{Binding SelectedMeasure}" ItemsSource="{Binding AllMeasures}" DisplayMemberPath="Name"></ComboBox>
+            <ComboBox Name="Parameters" Margin="5 0" SelectedItem="{Binding SelectedParameter}" ItemsSource="{Binding AllParameters}" DisplayMemberPath="Name"></ComboBox>
+
+            <Label>Значение параметра:</Label>
+            <xctk:DecimalUpDown Name="Value" Margin="5 0" ValueChanged="On_ValueChanged" Value="{Binding Value}"/>
+
+            <Label>Единица измерения:</Label>
+            <TextBox IsReadOnly="True" Margin="5 0" Text="{Binding MeasureUnit.Name}"></TextBox>
         </StackPanel>
+
         <Grid Row="1" Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="0.2*"/>
@@ -40,7 +44,7 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Row="1" Grid.Column="1" Command="{Binding AddOrUpdateParameterCommand}">Готово</Button>
+            <Button Grid.Row="1" Grid.Column="1" Command="{Binding AddOrUpdateParameterValueCommand}">Готово</Button>
         </Grid>
     </Grid>
 </Window>
