--- a/FlowModelDesktop/AdminWindow.xaml
+++ b/FlowModelDesktop/AdminWindow.xaml
@@ -4,8 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FlowModelDesktop"
+        xmlns:viewModel="clr-namespace:FlowModelDesktop.ViewModel"
         mc:Ignorable="d"
-        Title="Панель администратора" Height="450" Width="800" SizeChanged="AdminWindow_OnSizeChanged">
+        Title="Панель администратора" Height="450" Width="800" SizeChanged="AdminWindow_OnSizeChanged"
+        d:DataContext="{d:DesignInstance viewModel:AdminWindowViewModel}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
@@ -65,8 +67,17 @@
                         <ColumnDefinition Width="0.8*"/>
                         <ColumnDefinition Width="0.2*"/>
                     </Grid.ColumnDefinitions>
-                    <DataGrid Grid.Column="0" SelectionMode="Single" SelectedItem="{Binding Path=SelectedParameterValue, Mode=TwoWay}" ItemsSource="{Binding AllParameterValues}" 
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="0.15*"/>
+                        <RowDefinition Height="0.15*"/>
+                        <RowDefinition Height="0.15*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <DataGrid Grid.Column="0" Grid.RowSpan="4" SelectionMode="Single" SelectedItem="{Binding Path=SelectedParameterValue, Mode=TwoWay}" ItemsSource="{Binding AllParameterValues}" 
                               ColumnWidth="*" HorizontalScrollBarVisibility="Auto" AutoGeneratingColumn="OnAutoGeneratingColumn" IsReadOnly="True"></DataGrid>
+                    <Button Grid.Row="0" Grid.Column="1" Margin="20 7" Command="{Binding AddParameterValueCommand}">Добавить</Button>
+                    <Button Grid.Row="1" Grid.Column="1" Margin="20 7" Command="{Binding EditParameterValueCommand}">Изменить</Button>
+                    <Button Grid.Row="2" Grid.Column="1" Margin="20 7" Command="{Binding DeleteParameterValueCommand}">Удалить</Button>
                 </Grid>
             </TabItem>
             <TabItem Header="Типы параметров">
