--- a/FlowModelDesktop/AdminWindow.xaml
+++ b/FlowModelDesktop/AdminWindow.xaml
@@ -86,7 +86,7 @@
                         <ColumnDefinition Width="0.8*"/>
                         <ColumnDefinition Width="0.2*"/>
                     </Grid.ColumnDefinitions>
-                    <DataGrid Grid.Column="0" SelectionMode="Single" SelectedItem="{Binding Path=SelectedTypeParameter, Mode=TwoWay}" ItemsSource="{Binding AllTypeParameters}" 
+                    <DataGrid Grid.Column="0" Grid.ColumnSpan="2" SelectionMode="Single" SelectedItem="{Binding Path=SelectedTypeParameter, Mode=TwoWay}" ItemsSource="{Binding AllTypeParameters}" 
                               ColumnWidth="*" HorizontalScrollBarVisibility="Auto" AutoGeneratingColumn="OnAutoGeneratingColumn" IsReadOnly="True"></DataGrid>
                 </Grid>
             </TabItem>
@@ -96,7 +96,7 @@
                         <ColumnDefinition Width="0.8*"/>
                         <ColumnDefinition Width="0.2*"/>
                     </Grid.ColumnDefinitions>
-                    <DataGrid Grid.Column="0" SelectionMode="Single" SelectedItem="{Binding Path=SelectedMeasure, Mode=TwoWay}" ItemsSource="{Binding AllMeasures}" 
+                    <DataGrid Grid.Column="0" Grid.ColumnSpan="2" SelectionMode="Single" SelectedItem="{Binding Path=SelectedMeasure, Mode=TwoWay}" ItemsSource="{Binding AllMeasures}" 
                               ColumnWidth="*" HorizontalScrollBarVisibility="Auto" AutoGeneratingColumn="OnAutoGeneratingColumn" IsReadOnly="True"></DataGrid>
                 </Grid>
             </TabItem>
@@ -106,8 +106,17 @@
                         <ColumnDefinition Width="0.8*"/>
                         <ColumnDefinition Width="0.2*"/>
                     </Grid.ColumnDefinitions>
-                    <DataGrid Grid.Column="0" SelectionMode="Single" SelectedItem="{Binding Path=SelectedUser, Mode=TwoWay}" ItemsSource="{Binding AllUsers}" 
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="0.15*"/>
+                        <RowDefinition Height="0.15*"/>
+                        <RowDefinition Height="0.15*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <DataGrid Grid.Column="0" Grid.RowSpan="4" SelectionMode="Single" SelectedItem="{Binding Path=SelectedUser, Mode=TwoWay}" ItemsSource="{Binding AllUsers}" 
                               ColumnWidth="*" HorizontalScrollBarVisibility="Auto" AutoGeneratingColumn="OnAutoGeneratingColumn" IsReadOnly="True"></DataGrid>
+                    <Button Grid.Row="0" Grid.Column="1" Margin="20 7" Command="{Binding AddUserCommand}">Добавить</Button>
+                    <Button Grid.Row="1" Grid.Column="1" Margin="20 7" Command="{Binding EditUserCommand}">Изменить</Button>
+                    <Button Grid.Row="2" Grid.Column="1" Margin="20 7" Command="{Binding DeleteUserCommand}">Удалить</Button>
                 </Grid>
             </TabItem>
         </TabControl>
