--- a/FlowModelDesktop/AdminWindow.xaml
+++ b/FlowModelDesktop/AdminWindow.xaml
@@ -96,8 +96,16 @@
                         <ColumnDefinition Width="0.8*"/>
                         <ColumnDefinition Width="0.2*"/>
                     </Grid.ColumnDefinitions>
-                    <DataGrid Grid.Column="0" Grid.ColumnSpan="2" SelectionMode="Single" SelectedItem="{Binding Path=SelectedMeasure, Mode=TwoWay}" ItemsSource="{Binding AllMeasures}" 
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="0.15*"/>
+                        <RowDefinition Height="0.15*"/>
+                        <RowDefinition Height="0.15*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <DataGrid Grid.Column="0" Grid.RowSpan="4" SelectionMode="Single" SelectedItem="{Binding Path=SelectedMeasure, Mode=TwoWay}" ItemsSource="{Binding AllMeasures}" 
                               ColumnWidth="*" HorizontalScrollBarVisibility="Auto" AutoGeneratingColumn="OnAutoGeneratingColumn" IsReadOnly="True"></DataGrid>
+                    <Button Grid.Row="0" Grid.Column="1" Margin="20 7" Command="{Binding AddMeasureCommand}">Добавить</Button>
+                    <Button Grid.Row="1" Grid.Column="1" Margin="20 7" Command="{Binding EditMeasureCommand}">Изменить</Button>
                 </Grid>
             </TabItem>
             <TabItem Header="Пользователи">
