--- a/FlowModelDesktop/MainWindow.xaml
+++ b/FlowModelDesktop/MainWindow.xaml
@@ -24,7 +24,7 @@
                 <MenuItem Header="Графики" Command="{Binding OpenChartsCommand}"></MenuItem>
                 <MenuItem Header="Таблица значений" Command="{Binding OpenTableCommand}"></MenuItem>
             </MenuItem>
-            <MenuItem Header="Справка"></MenuItem>
+            <MenuItem Header="Эксперимент" Command="{Binding MakeExperimentCommand}"></MenuItem>
         </Menu>
 
                 
