--- a/FlowModelDesktop/ExperimentMainWindow.xaml
+++ b/FlowModelDesktop/ExperimentMainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:FlowModelDesktop"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        Title="ExperimentMainWindow" Height="745" Width="1200" MinHeight="745" MinWidth="1200" FontWeight="DemiBold" FontSize="14" SizeChanged="Window_SizeChanged">
+        Title="ExperimentMainWindow" Height="745" Width="1200" MinHeight="745" MinWidth="1200" FontWeight="DemiBold" FontSize="14">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="400"/>
@@ -42,8 +42,8 @@
 
             <GroupBox Header="Варьируемый параметр" Padding="0 5" Margin="5 0 0 0">
                 <StackPanel>
-                    <RadioButton Margin="0 10" >Температура крышки, °C</RadioButton>
-                    <RadioButton Margin="0 10">Скорость крышки, м/с</RadioButton>
+                    <RadioButton Name="Temperature" Margin="0 10" Checked="ToggleButton_OnChecked" >Температура крышки, °C</RadioButton>
+                    <RadioButton Name="Velocity" Margin="0 10" Checked="ToggleButton_OnChecked">Скорость крышки, м/с</RadioButton>
                     <Label>Диапазон варьирования:</Label>
                     <Grid>
                         <Grid.ColumnDefinitions>
@@ -52,7 +52,7 @@
                             <ColumnDefinition Width="0.35*"/>
                         </Grid.ColumnDefinitions>
                         <xctk:DecimalUpDown Grid.Column="0" Name="Min" Margin="3"></xctk:DecimalUpDown>
-                        <Label Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">≤ X ≤</Label>
+                        <Label Name="Range" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">≤ X ≤</Label>
                         <xctk:DecimalUpDown Grid.Column="2" Name="Max" Margin="3"></xctk:DecimalUpDown>
 
                     </Grid>
@@ -66,7 +66,7 @@
                 </StackPanel>
             </GroupBox>
 
-            <Button Name="test" Margin=" 100 8">Рассчитать</Button>
+            <Button Margin=" 100 8">Рассчитать</Button>
         </StackPanel>
 
         <TabControl Grid.Column="1">
