--- a/FlowModelDesktop/ExperimentMainWindow.xaml
+++ b/FlowModelDesktop/ExperimentMainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:FlowModelDesktop"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        Title="ExperimentMainWindow" Height="745" Width="1200" MinHeight="745" MinWidth="1200" FontWeight="DemiBold" FontSize="14">
+        Title="ExperimentMainWindow" Height="800" Width="1200" MinHeight="800" MinWidth="1200" FontWeight="DemiBold" FontSize="14">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="400"/>
@@ -42,8 +42,8 @@
 
             <GroupBox Header="Варьируемый параметр" Padding="0 5" Margin="5 0 0 0">
                 <StackPanel>
-                    <RadioButton Name="Temperature" Margin="0 10" Checked="ToggleButton_OnChecked" >Температура крышки, °C</RadioButton>
-                    <RadioButton Name="Velocity" Margin="0 10" Checked="ToggleButton_OnChecked">Скорость крышки, м/с</RadioButton>
+                    <RadioButton Name="Temperature" Margin="0 10" Checked="ToggleButton_OnChecked" IsChecked="{Binding IsTemperatureChecked}">Температура крышки, °C</RadioButton>
+                    <RadioButton Name="Velocity" Margin="0 10" Checked="ToggleButton_OnChecked" IsChecked="{Binding IsVelocityChecked}">Скорость крышки, м/с</RadioButton>
                     <Label>Диапазон варьирования:</Label>
                     <Grid>
                         <Grid.ColumnDefinitions>
@@ -51,22 +51,24 @@
                             <ColumnDefinition Width="0.1*"/>
                             <ColumnDefinition Width="0.35*"/>
                         </Grid.ColumnDefinitions>
-                        <xctk:DecimalUpDown Grid.Column="0" Name="Min" Margin="3"></xctk:DecimalUpDown>
+                        <xctk:DecimalUpDown Name="Min" Grid.Column="0" Margin="3" Value="{Binding MinRangeValue}"></xctk:DecimalUpDown>
                         <Label Name="Range" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">≤ X ≤</Label>
-                        <xctk:DecimalUpDown Grid.Column="2" Name="Max" Margin="3"></xctk:DecimalUpDown>
-
+                        <xctk:DecimalUpDown Name="Max" Grid.Column="2" Margin="3" Value="{Binding MaxRangeValue}"></xctk:DecimalUpDown>
                     </Grid>
+                    <Label>Шаг варьирования:</Label>
+                    <xctk:DecimalUpDown Name="StepRange" ValueChanged="ValueChanged" Value="{Binding Step}"></xctk:DecimalUpDown>
+
                 </StackPanel>
             </GroupBox>
 
             <GroupBox Header="Критериальное значение" Padding="0 5" Margin="5 0 0 0">
                 <StackPanel>
-                    <RadioButton Margin="0 10" >Температура материала, °C</RadioButton>
-                    <RadioButton Margin="0 10">Вязкость материала, Па*с</RadioButton>
+                    <RadioButton Margin="0 10" IsChecked="{Binding IsTemperatureCriteriaChecked}">Температура продукта, °C</RadioButton>
+                    <RadioButton Margin="0 10" IsChecked="{Binding IsViscosityCriteriaChecked}">Вязкость продукта, Па*с</RadioButton>
                 </StackPanel>
             </GroupBox>
 
-            <Button Margin=" 100 8">Рассчитать</Button>
+            <Button Margin=" 100 8" Command="{Binding CalculateCommand}">Рассчитать</Button>
         </StackPanel>
 
         <TabControl Grid.Column="1">
